--- a/OpenDataForHealth/OpenData4Health-web.html
+++ b/OpenDataForHealth/OpenData4Health-web.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta http-equiv="refresh" content="durée;URL=https://www.opendata4health.org">
+</head>
 <body bgcolor="white" font="Verdana">
 <p align="center"><img src="opendata4health/main_image.jpg" width="60%" alt="OpenData4Health"></p>
 <h1>What is OpenData4Health?</h1>
